cluster-cd/apps/chongus/radarr-form-auth-test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    ingress: "externaldns"
  labels:
    app.kubernetes.io/instance: &name radarr-form-auth-test
    app.kubernetes.io/name: *name
  name: *name
spec:
  ingressClassName: nginx
  rules:
    - host: &host radarr-form-test.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: *name
                port:
                  name: http
            path: /
            pathType: Prefix
          - backend:
              service:
                name: *name
                port:
                  name: metrics
            path: /exporter-metrics
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: radarr-tls
